[tool.poetry]
name = "fortress"
version = "0.0.1"
description = "Deta Base Typed ODM"
authors = ["Ian Kollipara <ian.kollipara@cune.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
deta = "^1.1.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.5"
black = "^22.3.0"
isort = "^5.10.1"
hypothesis = "^6.42.3"
bandit = "^1.7.4"
safety = "^1.10.3"
radon = "^5.1.0"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
